[package]
name = "lnd_grpc_rust"
version = "2.8.0"
authors = ["Martin Habovstiak <martin.habovstiak@gmail.com>", "Jonathan Zernik <yzernik@gmail.com>", "Nitesh Balusu <niteshbalusu@icloud.com>"]
edition = "2021"
description = "An async library implementing LND RPC via tonic_openssl and prost"
homepage = "https://github.com/niteshbalusu11/lnd-grpc-rust"
repository = "https://github.com/niteshbalusu11/lnd-grpc-rust"
readme = "README.md"
keywords = ["LND", "rpc", "grpc", "tonic", "async"]
categories = ["api-bindings", "asynchronous", "cryptography::cryptocurrencies", "network-programming"]
license = "MIT"

[lib]
doctest = false

[dependencies]
tonic = "0.12"
tonic-openssl = { git = "https://github.com/nirvati/tonic-openssl", rev = "d2861d043467958802b724958babb85ca6af4597" }
hyper = { version = "1.0", features = ["http2"] }
hyper-util = { version = "0.1", features = ["client-legacy"] }
hyper-openssl = { version = "0.10", features = ["client-legacy"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1", features = ["net"] }
openssl = "0.10.66"
tower = "0.5.0"
pretty_env_logger = "0.5.0"
hex = "0.4.3"
prost = { version = "0.13", features = ["prost-derive"] }
serde = { version = "1.0", features = ["derive"] }
futures-util = "0.3.31"
http-body-util = "0.1.2"

[build-dependencies]
tonic-build = "0.12"
